--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <h2>Priyananda Soubam</h2>
   <h4> UX/UI Desginer</h4>
 </header>
+<div class="heroImage">
   <img src="images/ProfileImage 2.png">
+</div>
+  
 
 <header>
   <nav>
